# breakout

./: CMakeLists.txt  README.md
doc/: notes.txt
include/: game_loop.h
src/: game-loop.cpp  main.cpp
